--- a/starterOnly/css/modal.css
+++ b/starterOnly/css/modal.css
@@ -55,12 +55,22 @@ img {
   background-color: #ff0000;
   color: #ffffff;
   border-radius: 15px;
+  text-decoration: underline;
+  /*
+  text-decoration-thickness: 1px;
+  text-underline-offset: 5px;
+  */
 }
 
 .topnav a.active {
   background-color: #ff0000;
   color: #ffffff;
   border-radius: 15px;
+  text-decoration: underline;
+  /*
+  text-decoration-thickness: 1px;
+  text-underline-offset: 5px;
+  */
 }
 
 .topnav .icon {
@@ -165,7 +175,7 @@ main {
   height: 100%;
   width: 100%;
   overflow: auto;
-  background-color: rgba(26, 39, 156, 0.4);
+  /*background-color: rgba(26, 39, 156, 0.4);*/
 }
 
 .content {
@@ -176,6 +186,7 @@ main {
   animation-duration: var(--modal-duration);
   background: #232323;
   border-radius: 10px;
+  box-shadow: -4px 8px 8px 4px rgba(0, 0, 0, .25);
   overflow: hidden;
   position: relative;
   color: #fff;
@@ -408,7 +419,7 @@ input[data-error]::after {
   font-size: 16px;
 }
 .hero-section {
-  min-height: 93vh;
+  /*min-height: 93vh;*/
   border-radius: 10px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -494,9 +505,23 @@ footer {
   text-align: center;
 }
 
+.centrageVertical {
+  padding-top: 50%;
+}
+
+.margeBouton {
+  margin-top: 2rem;
+}
+
 /* --- fin de mes clauses CSS --- */
 
 @media screen and (max-width: 800px) {
+  main {
+    margin: 0px 10px 0 10px;
+  }
+  .header-logo img {
+    width: 80%;
+  }
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -513,12 +538,14 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 18vw;
     white-space: normal;
+    width: 80vw;
   }
   .hero-text {
     width: unset;
     font-size: 1.5rem;
+    width: 80vw;
   }
   .hero-img img {
     border-radius: 10px;
@@ -532,6 +559,12 @@ footer {
   .copyrights {
     margin-top: 50px;
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .hero-text {
+    font-size: 50%;
   }
 }
 
